fixed spacing on the contact page

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,5 +1,6 @@
 #form {
-    margin-top: 8%;
+  padding-top: 20px;
+  margin-top: 73px;
 }
 
 @media screen and (max-width: 732px){
@@ -9,10 +10,10 @@
       display: block;  
       text-align: center;
       justify-content: center;
+      font-size: 16px;
+      min-width: 10px;
+      padding-top: 0;
+      margin-top: 0;
       
-    }
-    #form {
-        font-size: 16px;
-        min-width: 10px;
     }
   }
